--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tiêu đề của trang web</tittle>
-  </head>
-  <body>
-    <!--Nội dung ghi chú-->
-    <h1>Đây là phần của trang web</h1>
-    <p>Nội dung của trang web</p>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Tiêu đề trang web</title>
+	</head>
+	<body>
+		<h1>Đây là phần đầu của trang web</h1>
+		<p>Nội dung của trang web</p>
+	</body>
 </html>
