--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<title>Tiêu đề trang web</title>
+	<meta charset="utf-8">
+	<title>Lop 12a4 hoc web</title>
 	</head>
-	<body>
-		<h1>Đây là phần đầu của trang web</h1>
-		<p>Nội dung của trang web</p>
-	</body>
+<body>
+	<h1>BAI TAP HOC HTML</h1>
+	<h2>Bài tập F1</h2>
+	<h3>hinh3</h3>
+	<h3><a href="hinh4.html">Hinh4</a></h3>
+	<h3><a href="hinh5.html">Hinh5</a></h3>
+	<h3>hinh6</h3>
+	<h2>bai tap F2</h2>
+</body>
 </html>
+
